<resources>
    <string name="app_name">AndroidDemos</string>
    <string name="tip1">下面是使用普通png图像为背景的按钮拉伸前后效果</string>
    <string name="tip2">下面是使用普通9Patch图像为背景的按钮拉伸前后效果</string>
    <string name="btn_text1">拉伸前</string>
    <string name="btn_text2">多输入几个字来观察拉伸后的效果</string>
    <string name="leaders">领导人</string>
    <string name="summoner_name">召唤师的名字</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scroll_text">这是测试滚动视图的文本这是测试滚动视图的文本这是测试滚动视图的文本
        这是测试滚动视图的文本这是测试滚动视图的文本这是测试滚动视图的文本这是测试滚动视图的文本
        这是测试滚动视图的文本这是测试滚动视图的文本</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related for menu test -->
    <string name="menu_test_text">This is the text for menu testing.\nTo show popup menu to click me.\nTo show context menu of me by long clicking me.</string>
    <string name="text_red">红色</string>
    <string name="text_green">绿色</string>
    <string name="text_blue">蓝色</string>
    <string name="text_black">黑色</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="common_item">普通菜单项</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">16号字体</string>
    <string name="caps_text">全部大写</string>
    <string name="cancel_all_caps_text">取消全部大写显示</string>
    <!-- String for Appbar test -->
    <string name="appbar_test_text">This is the text for app testing.\nTo show overflow menu items, click the overflow icon at the end of the appbar.</string>
    <string name="test_action_bar_title">AppBar Test</string>
    <string name="action_text_search"> 搜索 </string>
    <string name="action_text_share">分享</string>
</resources>
